# agentco

./: .env.example  .gitignore  .secrets  ALEX-TD-066.md  ARCHITECTURE.md  DEPLOY-INSTRUCTIONS.md  Makefile  PRODUCT.md  README.md  ROADMAP.md  RULES.md  index.html  railway.toml
backend/: .env.example  Dockerfile  LAYERS.md  Procfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_users.py  0003_add_companies_owner_id.py  0004_agents_crud_m1_003.py  0005_tasks_fsm_m1_004.py  0006_credentials_m1_005.py  0007_runs_api_m2_004.py  0008_agent_library_m3_002.py  0009_mcp_servers_post_004.py  0010_indexes_alex_td_004.py  0011_indexes_alex_td_059_060.py  0012_postgresql_compat.py  0013_index_companies_owner_id.py  0014_unique_credential_company_provider.py  0015_index_users_email.py  0016_index_agent_parent_agent_id.py  0017_run_events_indexes_alex_td_248_250.py  0018_mcp_unique_company_notnull_alex_td_257_258.py  0019_agent_library_use_count_index_alex_td_266.py  0020_agent_library_owner_id_alex_td_269.py  0021_email_normalize_alex_td_267.py
backend/src/agentco/: __init__.py  cli.py  eventbus.py  logging_config.py  main.py  templates.py
backend/src/agentco/auth/: __init__.py  dependencies.py  security.py
backend/src/agentco/core/: event_bus.py  rate_limiting.py
backend/src/agentco/db/: session.py
backend/src/agentco/handlers/: __init__.py  agents.py  auth.py  companies.py  credentials.py  library.py  mcp_servers.py  memory.py  runs.py  tasks.py  templates.py  ws_events.py
backend/src/agentco/llm/: client.py
backend/src/agentco/memory/: __init__.py  service.py  store.py  vector_store.py
backend/src/agentco/models/: __init__.py  (+5 more)
backend/tests/: conftest.py  test_agent_node.py  test_agents.py  test_alex_post_001_postgres_migration.py  test_alex_post_002_redis_eventbus.py  test_alex_post_003_rate_limiting.py  test_alex_post_004_logging.py  test_alex_post_005_checkpointing.py  test_alex_post_006_versioning.py  test_alex_post_007_retry.py  test_alex_post_010_async_engine.py  test_alex_post_012_rate_limit_redis.py  test_alex_td_010_eventbus_singleton.py  test_alex_td_011_ws_ownership.py  test_alex_td_015_019.py  test_alex_td_020_024.py  test_alex_td_032_034.py  test_alex_td_035_036.py  test_alex_td_039.py  test_alex_td_040.py  test_alex_td_041_042.py  test_alex_td_044_046.py  test_alex_td_049.py  test_alex_td_050_053.py  test_alex_td_054_057.py  test_alex_td_059_063.py  test_alex_td_061.py  test_alex_td_064_065.py  test_alex_td_064_orm_imports.py  test_alex_td_066_table_naming.py  test_alex_td_070_071.py  test_alex_td_074.py  test_alex_td_075_076.py  test_alex_td_077_079.py  test_alex_td_083_085.py  test_alex_td_084_086.py  test_alex_td_086_087.py  test_alex_td_088_091.py  test_alex_td_088_092.py  test_alex_td_092_094.py  (+91 more)
(+465 files in other folders)
