[project]
name = "agentco"
version = "0.1.0"
description = "AgentCo backend — AI agent orchestration platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "litellm>=1.40",
    "langgraph>=0.2",
    "httpx>=0.27",
    "typer>=0.9",
    "pyjwt>=2.7",
    "bcrypt>=4.0",
    "pydantic[email]>=2.12.5",
    "cryptography>=46.0.5",
    "langgraph-checkpoint-sqlite>=1.0",
    "sqlite-vec>=0.1.6",
    "slowapi>=0.1.9",
    "structlog>=24.0",
]

[project.scripts]
agentco = "agentco.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
# Install with: pip install "agentco[postgres]" or uv add "agentco[postgres]"
# NOT required for default SQLite deploy — only needed when switching DATABASE_URL to Postgres.
postgres = [
    "psycopg2-binary>=2.9",
]
# Async SQLAlchemy + asyncpg driver (ALEX-POST-010).
# Install with: pip install "agentco[async]" or uv add "agentco[async]"
# Required for async FastAPI endpoints with PostgreSQL.
async = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
]
# pgvector extension for vector memory on PostgreSQL (ALEX-POST-011).
# Install with: pip install "agentco[postgres-vector]"
# Requires pgvector extension in the database: CREATE EXTENSION IF NOT EXISTS vector;
postgres-vector = [
    "pgvector>=0.3",
    "numpy>=1.26",
]
# Redis pub/sub for multi-worker EventBus (ALEX-POST-002).
# Install with: pip install "agentco[redis]" or uv add "agentco[redis]"
# Required when REDIS_URL env var is set.
redis = [
    "redis[asyncio]>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.4.0",
]
